--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject", 
-    "sass": "sass --watch src/sass:src/css/style.css"   
+    "sass": "sass --watch src/sass/style.scss:src/css/style.css"   
   },
   "eslintConfig": {
     "extends": [
